feat - adding login-signup model with redux integration (#3)
* feat - adding login-signup model with redux integration

* feat - adding google login

refactor - adding toasts for dealing with toast and changing disgn of login and signup; adding function for saetting multiple values

chore - adding type for setting value and setting property for

* feat - adding twitter login in the app

--- a/app/_utils/icons & logos/styles.module.css
+++ b/app/_utils/icons & logos/styles.module.css
@@ -9,3 +9,16 @@
 .dark-logo {
   stroke: white;
 }
+
+.password-icon {
+  fill: #5d6265;
+  cursor: pointer;
+}
+
+.password-icon:hover {
+  fill: black;
+}
+
+.twitterBtn {
+  enable-background: new 0 0 24 24;
+}
