--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.leaflet-marker-icon.leaflet-div-icon {
+  background-color: transparent;
+  border: none;
+}
