feat - adding admin delivery area component
chore - improving leaflet map state by assigning it z-index 1

UI - improving UI of start icon of logout button

--- a/app/globals.css
+++ b/app/globals.css
@@ -7,8 +7,12 @@
   border: none;
 }
 
-.hideMapContainer {
+.mainContainer {
   .leaflet-container {
-    z-index: -1;
+    z-index: 1;
   }
+}
+
+.sr-only {
+  display: none;
 }
