--- a/app/styles.module.css
+++ b/app/styles.module.css
@@ -2,3 +2,8 @@
   -webkit-backdrop-filter: blur(20px);
   backdrop-filter: blur(20px);
 }
+
+.product-autocomplete-container {
+  display: grid;
+  grid-template-columns: 6fr 1fr;
+}
