--- a/app/styles.module.css
+++ b/app/styles.module.css
@@ -7,3 +7,20 @@
   display: grid;
   grid-template-columns: 6fr 1fr;
 }
+
+.merchant-registration-inputs {
+  display: grid;
+  grid-template-columns: 1fr 10fr;
+  align-items: center;
+}
+
+.numberInput::-webkit-outer-spin-button,
+.numberInput::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+/* Firefox */
+.numberInput {
+  -moz-appearance: textfield;
+  appearance: textfield;
+}
