feat - adding component for new merchant registrations

--- a/app/styles.module.css
+++ b/app/styles.module.css
@@ -24,3 +24,8 @@
   -moz-appearance: textfield;
   appearance: textfield;
 }
+
+.merchant-registration-card-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
